Closed Bug 511010 Opened 17 years ago Closed 15 years ago

dismissing menu popup in editbookmark overlay causes chrome UI to flicker

Categories

(Core :: XUL, defect)

1.9.2 Branch
x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: xtc4uall, Assigned: enndeakin)

References

Details

(Keywords: polish, regression, Whiteboard: [polish-interactive])

Attachments

(1 file, 1 obsolete file)

STR: 1) add a bookmark using star button 2) click again on star button to get the bookmark editing menu 3) right-click either in the name or the tag field 4) dismiss the context menu popup with a left-click => notice the flicker on title and menu bar of Fx chrome UI instead of 4)/5) you can also click successively on the folder dropdown field expanding and collapsing it. if you use ESC key for dismissing, there's no flicker, so i presume some mouse event firing causes this bug. there's no error console output. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20090817 Minefield/3.7a1pre ID:20090817050221 range: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=860a9acc39b1&tochange=69c6dbdfd179
Flags: blocking-firefox3.6?
bug 404766, j'accuse! Looks like a focus issue. Enn, we can haz fix?
Flags: wanted-firefox3.6+
Flags: blocking-firefox3.6?
Flags: blocking-firefox3.6-
Keywords: polish
Whiteboard: [polish-interactive]
Blocks: 404766
Component: Bookmarks & History → XUL
Flags: wanted-firefox3.6+
Flags: blocking-firefox3.6-
Product: Firefox → Core
QA Contact: bookmarks → xptoolkit.widgets
Version: Trunk → 1.9.2 Branch
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attached patch Right patchSplinter Review
Attachment #490189 - Attachment is obsolete: true
The flickering on pressing the folder dropdown looks like a different bug, unrelated to window focus.
Attachment #490192 - Flags: review?(jmathies)
Comment on attachment 490192 [details] [diff] [review] Right patch looks good, I reproduced the flicker and with this patch, it's not present.
Attachment #490192 - Flags: review?(jmathies) → review+
Attachment #490192 - Flags: approval2.0?
Attachment #490192 - Flags: approval2.0? → approval2.0+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Depends on: 656865
Depends on: 746775
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: