Bug 511010, don't activate panels when clicking on one to close a menu, fixes flickering when closing menulist in bookmarks panel, r=jmathies,a=bsmedberg